<resources>
    <string name="app_name">DailyNotes</string>
    <string name="tv_correo">Digite su correo</string>
    <string name="tv_clave">Digite su contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_note">Notas</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_fecha">Digite la fecha actual</string>
    <string name="msg_imagen">Imagen del momento</string>
    <string name="msg_bueno">¿Hoy fue un día bueno o malo?</string>
    <string name="msg_descripcion">Redacte un resumen de su día</string>
    <string name="bt_guardar">Guardar</string>
    <string name="msg_agregado">Nota agregado</string>
</resources>