<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_note">

    <fragment
        android:id="@+id/nav_note"
        android:name="com.dailynotes.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" >
        <action
            android:id="@+id/action_nav_note_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.dailynotes.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.dailynotes.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.dailynotes.ui.note.AddNoteFragment"
        android:label="fragment_add_note"
        tools:layout="@layout/fragment_add_note" >
        <action
            android:id="@+id/action_addNoteFragment_to_nav_note"
            app:destination="@id/nav_note" />
    </fragment>
</navigation>