<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vistaFila"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="40dp"
    app:cardElevation="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/msg_fecha" />

        <TextView
            android:id="@+id/tv_bueno"
            android:layout_width="211dp"
            android:layout_height="19dp"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/tv_fecha"
            tools:text="@string/msg_bueno" />

        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:text="@string/msg_descripcion"
            android:textAlignment="textStart"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="@string/msg_descripcion" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="108dp"
            android:layout_height="19dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="Este fue un día"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="108dp"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:text="Resumen"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>